<resources>
    <string name="app_name">Rate My Business Partners</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_company_profile">CompanyProfile</string>
    <string name="title_activity_write_review">WriteReview</string>
    <string name="title_activity_review_results">ReviewResults</string>
    <string name="server_client_id">132195057733-0vb1eqsl6alv4tbv2v5q5louh21340u2.apps.googleusercontent.com</string>
    <string name="title_search_results">SearchResults</string>
    <!-- Main -->
    <string name="main_textView_title">Rate My Business Partners</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="main_button_signout">Sign out</string>
    <string name="main_button_disconnect">Disconnect</string>
    <string name="main_textView_signedout">Signed out</string>
    <string name="continue_without_login"><u>continue without login</u></string>

    <!-- Home Page -->
    <string name="is_signed_in">Sign In</string>

    <!--Select Company Pop Up -->
    <string name="select_company_textView">Please Select Your Company: </string>
    <string name="select_company_submit">Submit</string>

    <!--Company Profile Strings-->
    <string name="company_profile_company_name">[Company Name]</string>
    <string name="company_profile_reviews">Recent Reviews:</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="company_profile_view_reviews">All Reviews</string>
    <string name="company_profile_write_review">Write Review</string>

    <!--Login page Strings-->
    <string name="login_textView_username">Username</string>
    <string name="login_textView_password">Password</string>
    <string name="login_textView_title">Welcome to Rate My Business Partner</string>
    <string name="login_button_login">Login</string>
    <string name="login_textView_register"><u>Register Now</u></string>
    <string name="login_textView_failedLogin">The username or password you entered was incorrect!</string>

    <!--Register page Strings-->
    <string name="register_textView_firstName">First Name</string>
    <string name="register_textView_lastName">Last Name</string>
    <string name="register_textView_email">Email</string>
    <string name="register_textView_company">Company</string>
    <string name="register_textView_username">Username</string>
    <string name="register_textView_password">Password</string>
    <string name="register_textView_confirmPassword">Confirm Password</string>
    <string name="register_button_register">Register</string>
    <string name="title_activity_view_review">ViewReview</string>

    <!-- Review Results Strings -->
    <string name="review_results_company_name_default">[Company Name]</string>
    <string-array name="sort_by_options">
        <item>Date - Newest</item>
        <item>Date - Oldest</item>
        <item>Rating - Highest</item>
        <item>Rating - Lowest</item>
    </string-array>
    <string-array name="review_results_date_options">
        <item>All</item>
        <item>Last week</item>
        <item>Last month</item>
        <item>Last 3 months</item>
        <item>Last 6 months</item>
        <item>Last 12 months</item>
    </string-array>
    <string name="review_results_spinner_sort_by">Sort By:</string>
    <string name="review_results_filter_button">Apply</string>


    <!-- Write Review Strings -->
    <string name="write_review_company_name_default">[Company Name]</string>
    <string name="write_review_submit_review">Submit</string>
    <string name="write_review_review_hint">Write your review...</string>
    <string name="write_review_anonymous_checkbox">Anonymous Review</string>
    <string name="write_review_toolbar_my_account">My Account</string>

    <!-- View Review Strings -->
    <string name="view_review_default_text">DEFAULT_REVIEW_TEXT</string>
    <string name="view_review_default_company_name">DEFAULT_COMPANY_NAME</string>

    <!--Search Engine-->
    <string name="Search">Test Search</string>
    <string name="Search_Company">Search Companies</string>
    <string name="Company">Company</string>
    <string name="SearchEngine_search">Search</string>
    <string name="Search_Engine_tile">Company Search</string>
    <string name="search_engine_results_returned">Results returned</string>


    <string name="title_activity_main_view">MainView</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_my_account">MyAccount</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="signin_fragment">Sign In</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_about_page">AboutPage</string>
    >>>>>>> 507e438263963022b7dd8d12ae337a4560598875

</resources>
