<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="seniordesign.ratemybusinesspartners.Register"
    tools:showIn="@layout/activity_register">

    <!--First Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/register_editText_firstName"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/register_textView_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--Last Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/register_editText_lastName"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/register_textView_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--Email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/register_editText_email"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/register_textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--Company-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/register_editText_company"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/register_textView_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--Username-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/register_editText_username"
            android:paddingBottom="10dp"
            android:inputType="text"
            android:hint="@string/register_textView_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--Password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/register_editText_password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/register_textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--Confirm Password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/register_editText_confirmPassword"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/register_textView_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--Register-->
    <Button
        android:id="@+id/register_button_register"
        android:text="@string/register_button_register"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

