<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="seniordesign.ratemybusinesspartners.Login"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/login_textView_username"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_editText_username"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/login_textView_password"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_editText_password"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_textView_register"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
