<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="seniordesign.ratemybusinesspartners.fragments.WriteReviewFragment">

    <TextView
        style="@style/text_information"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/writeReviewWriteReviewTextView"
        android:text="Write Review"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/writeReviewEditText"
        android:layout_below="@id/writeReviewWriteReviewTextView"
        android:lines="8"
        android:inputType="textMultiLine"
        android:gravity="start"
        android:scrollbars="vertical"
        android:hint="@string/write_review_review_hint"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/writeReviewEditText"
        android:id="@+id/reviewRatingBar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_review_submit_review"
        android:id="@+id/submitReviewButton"
        android:layout_below="@id/reviewRatingBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="submitReview"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_review_anonymous_checkbox"
        android:id="@+id/anonymousCheckbox"
        android:layout_alignBaseline="@id/submitReviewButton"
        android:layout_toRightOf="@id/submitReviewButton"
        android:layout_toEndOf="@id/submitReviewButton" />

</RelativeLayout>
