<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/blue_grey_900"
    tools:context="seniordesign.ratemybusinesspartners.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Test Company Profile"
        android:id="@+id/button"
        android:onClick="switchToCompanyProfile"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Company Reviews: "
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:id="@+id/search"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick = "switchToSearchCompany"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="425dp">
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:visibility="invisible" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/main_button_signout"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/main_button_disconnect"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="40dp"
            android:visibility="gone" />



    </RelativeLayout>
</LinearLayout>
